changement css weather

--- a/src/Components/LittleBox/LittleBox.css
+++ b/src/Components/LittleBox/LittleBox.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 0.9;
 }
 .littleContainer {
     display: flex;
